@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-55c79aa3392ea5d635848c33be8fa4f54744a9ab  14662 ChangeLog
+34c9fcada544411992ad0880144c1af59fd061bb  14802 ChangeLog
 8b869a67b40453fb41c8527e8aaf80f66c8a473f   2731 Makefile
 07b4f1de1ba206bdcadd2d234c89006f1b07388a   9882 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -22,22 +22,22 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
 3dd526163d4ac6cd2c6d3c6b5e244400a77c5f7d  10160 src/config.h
-906a43c5c7ff5eb8fe40457fcdd2f6c32cd1fdda 154862 src/evilvte.c
+8dd394a21011c50c590ff6af6dbf3d66749cc93a 155048 src/evilvte.c
 b6d50176aaf9828bcdf63f8d52f8c8080fefd9f2  14792 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk7x2moACgkQdEpXpumNYVkcxACeOEtsR+O6iS5KiHdjyIHoTp1D
-XvkAoIOKEGCiT6rPtlSxv6Q4jTqVDBTyiQIcBAEBCgAGBQJO8dpqAAoJELc3H0m+
-i6gZ+v4P/RnhYohRk9To0q650xN59iSEf5tARQ434+TThllQL233hFpNwvHdfexY
-4lRgu2AIjw03Z4AGXxDNkt2PsEgAInuIiPATVxNLo/U2ne+X4mONF27GRsbyw2/Q
-zQAHeS+uc5ZdhWj+76Q6VVHUbmObkkdIm5mEILe+nGoGTQAzkpj3Vmhpc28smzcm
-XOY05mX0ey+fKzoUXFAhu8sCgr4uen2R+1QtDKwYsVAz/n2pgNliQ0v3uWdXTehh
-iobCNoOPjNsJ2WFap0y3R1mWIMiswWNIrL0sZ+iCdQB04fqn9AbVxxuGFAKuB6Q2
-4lTYneSwG2lJpisGptaRLH8PjB7nYDGc1amh7u2/mA/l4PcVL9A31f1PHdoZkdiF
-f82g/onwmikdJGP1MmxXb+eQaHoGApsBQoAZj44Poq5hvpt5t9DA91BvjFQmR6cS
-yNW7DiTOfac/eXkl4iki1/Q9E9lT/8IJM8lIN6dVRZGQOEoM3l2fuSmnXqPgY7sC
-GcQfqF/+Om2p0YfEHdN8ZrQoikVkC6gEXn42RaEPLRLlozJx+cguzTkiZJFJuZpT
-V4wfHKliWA3oHSe5ZQ/B/ad1TBLg1aBBbi+MsPrds6N6GOv3AGkvPH8QvBCKXpiI
-kOk3uVkgfOu5J2T8vDXepgMctNEanjZaTDC+HHeYWwW/fw4+ckto
-=1vw7
+iEYEARECAAYFAk8Xz8UACgkQdEpXpumNYVlnKACfWoA+Q7XOq7KYlwkDoQGj41Fd
+VwoAnAqyRtdUl7B3I+MbogeahvgfdNsMiQIcBAEBCgAGBQJPF8/FAAoJELc3H0m+
+i6gZ4BgP/RT1m64Gr7PkcU+ieVDgEGxZ9/NQo7aI4KRY6RzBLg4aNIuue4EX+Xdz
+HqTRIeG6ovSwwyG1YK3n5pbcYDXBVVVkZR5vIe8tnRC3HmLhNhW9islNz7KFpx2n
+IVJQUe3YMo5CHYw5P2t+yxU2/T8H1e3a74dCK9Cfzr4E9VsYYLQp7Mbt8Aqgvmp/
+YiVqJge4N7+52EwiMobOSV2irf/ljc7/8/FhsE7IeOJI+NAF15qym/VAW0cpSmdM
+ri44KAEjzHDsiDoqwIdtYNcaotADmzrKC2bo5zunbx4Er1ugVVVI1GriVoolmr0N
+ir9LZlV5UbDbJqomkZNZc6guSXgfVQneTt92QmRVd3HI3GccAANfMtw9VVH2e2mM
+qisXpQ7i9la3eR1rkZsQyr8qOR7BW+/CcQi7ZPVhY5LTfVHnU5Mtmz0IeWOZ3rwK
+t+h4CUucj5IgZethV+W/it51ES5HZXkQ7BhpNwOKSAAjrU5gh55UGaCK1xxLIRLx
+rYkysmQnjSJjU993d/DudBJ1fA05klZ5B4ndcBJQcht21XSE5324W4KYPI1p7OHS
+qUrEIO1PQReBAv+0zpOx+TSLk/wMaJMTeVyJc7faYABd/hfrX/mhz4v2l7qUhYLE
+GYxOpzf497Zgs0nbtLP62Drezw/hLopno8XFXOV0eWN/DJHBBBuE
+=YkOu
 -----END PGP SIGNATURE-----
